# instituto-langchain

./: .gitignore  README.md  pyproject.toml
.arquivos/: .gitignore
.chainlit/: config.toml
.chainlit/translations/: .gitignore
.db/: AGENTE_SQL.db  SQL_AGENT.db
.notebooks/: automatize-me.ipynb  busca-sql.ipynb  extrair_guardar_memorias.ipynb  sql_agent.ipynb
.testes/: retry.py
instituto_langchain/automatize_me/: app.py  chainlit.md
instituto_langchain/automatize_me/.chainlit/translations/: pt-BR.json
instituto_langchain/automatize_me/agents/: code_review_agents.py
instituto_langchain/automatize_me/agents/prompts/: code_review_prompts.py
instituto_langchain/automatize_me/code_review/: configuracoes.py  requisitos_revisao_codigo.md
instituto_langchain/automatize_me/code_review/agents/utils/: gerenciador_modelo.py
instituto_langchain/automatize_me/graphs/: revisor_codigo_graph.py
instituto_langchain/brian/: settings.py
instituto_langchain/brian/core/: prompts.py
instituto_langchain/brian/modulos/memoria/long_term/: gerenciador_memoria.py  vector_store.py
instituto_langchain/busca-sql/: configuracoes.py
instituto_langchain/busca-sql/interfaces/chainlit/: app.py
instituto_langchain/busca_sql/: configuracoes.py  recrutamento.md  selecao.md
instituto_langchain/busca_sql/core/: prompts.py
instituto_langchain/busca_sql/docs/: admissao_colaborador.md  recrutamento.md  selecao.md
instituto_langchain/busca_sql/graph/: graph.py  nodes.py  state.py
instituto_langchain/busca_sql/graph/utils/: gerenciador_banco.py  gerenciador_llm.py
instituto_langchain/busca_sql/interfaces/chainlit/: app.py
instituto_langchain/le_rec_hum/: settings.py
instituto_langchain/le_rec_hum/core/: prompts.py
instituto_langchain/le_rec_hum/graph/: graph.py  nodes.py  state.py
instituto_langchain/le_rec_hum/graph/utils/: data_base_manager.py  llm_manager.py
instituto_langchain/le_rec_hum/interfaces/chainlit/: app.py
instituto_langchain/mcp_adapters/: agent.py
instituto_langchain/mcp_adapters/servers/: calculadora_server.py  file_system_server.py  math.py
instituto_langchain/mcp_server/: README.md  configuracoes.py  summarizer_run.py
instituto_langchain/mcp_server/agents/: sumarizer_crew.py
instituto_langchain/mcp_server/agents/config/: agents.yaml  tasks.yaml
instituto_langchain/mcp_server/client/: clickup_client.py  test_client.py
instituto_langchain/mcp_server/server/: calculadora_server.py  file_system_server.py  sumarizer_server.py  yt_transcript_server.py
instituto_langchain/notebooks/: automatize-me.ipynb
