[tool.poetry]
name = "instituto-langchain"
version = "0.1.0"
description = ""
authors = ["rodrigo.goncalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
chainlit = "2.4.302"
pydantic-settings = "2.8.1"
langgraph = "0.3.25"
langchain-groq = "0.3.2"
mcp = "1.6.0"
langchain-mcp-adapters = "0.0.7"
youtube-transcript-api = "1.0.3"
crewai = "0.108.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
chainlit-app = "chainlit run instituto_langchain/busca-sql/interfaces/chainlit/app.py:cl -w"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
